# tenbox

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build-base.yml  build-initramfs.yml  build-kernel.yml  build-rootfs.yml  deploy-website.yml  pr-check.yml  release.yml
docs/: agent-profile.md  linux-update.md  radxa-a733-kvm-vgic.md  release.md
installer/: TenBox.wxs  en-US.wxl  zh-CN.wxl
packaging/build-base/: Dockerfile.bullseye  README.md
packaging/debian/: build-deb.sh  control.in
packaging/systemd/: agentsphered.service
scripts/: build-macos.sh  build-msi.bat  convert_icons.py  get-kernel.sh  image_manager.py  install-linux.sh  make-dmg.sh  make-initramfs.sh  make-rootfs-copaw.sh  make-rootfs-openclaw.sh  make-rootfs.sh  patch-virtio-gpu.sh  publish.py
scripts/arm64/: make-initramfs.sh  make-rootfs-chromium.sh  make-rootfs-hermes.sh  make-rootfs-openclaw.sh  make-rootfs-qwenpaw.sh
scripts/ci/: update_images_json.py  upload_to_oss.py
scripts/docker/: Dockerfile  build.sh
scripts/keys/: README.md
scripts/rootfs-configs/: Hermes.desktop  OpenClaw.desktop  QwenPaw.desktop  qwenpaw-provider-tenbox.json
scripts/rootfs-scripts/: tenbox-agent-backup  tenbox-agent-health  tenbox-agent-profile  virtio-gpu-resize.sh  virtiofs-automount  virtiofs-desktop-sync
scripts/rootfs-services/: 50-openclaw-power.rules  50-terrence-power.rules  qwenpaw.service  (+4 more)
src/: main.cpp  version.h.in
src/common/: ports.h  (+1 more)
tests/: CMakeLists.txt  test_agent_tools_guest.sh  test_qcow2.cpp
website/: README.md  index.html
(+201 files in other folders)
